# multiband_bls

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  ci.yml
figures/: benchmark_gpu_multi_3bands.csv  benchmark_gpu_multi_5bands.csv  benchmark_gpu_single.csv
src/multiband_bls/: __init__.py  _eebls.c  _eebls.pyx  _meebls.c  _meebls.pyx  _msbls.c  _msbls.pyx  _sbls.c  _sbls.pyx  api.py  gpu.py  periodogram.py  reference.py
tests/: test_sbls.py
