[build-system]
requires = ["setuptools>=61", "wheel", "Cython>=3.0", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multiband_bls"
version = "0.1.0"
description = "Sparse BLS and multiband Sparse BLS for VRO/LSST light curves"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{ name = "Jan van Roestel", email = "jcjvanroestel@gmail.com" }]
keywords = ["astronomy", "transit", "BLS", "periodogram", "LSST", "VRO", "eclipsing binary"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
test = ["pytest>=7.0", "astropy>=5.0"]

[project.urls]
Homepage = "https://github.com/jcjvanroestel/multiband_bls"
Repository = "https://github.com/jcjvanroestel/multiband_bls"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
multiband_bls = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires a CUDA-capable GPU and CuPy",
    "slow: long-running tests",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
