[build-system]
requires = ["setuptools>=61", "wheel", "Cython>=3.0", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multiband_bls"
version = "0.1.0"
description = "Sparse BLS and multiband Sparse BLS for VRO/LSST light curves"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{ name = "Jan van Roestel", email = "jcjvanroestel@gmail.com" }]
keywords = ["astronomy", "transit", "BLS", "periodogram", "LSST", "VRO", "eclipsing binary"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0", "astropy>=5.0"]

[project.urls]
Homepage = "https://github.com/jcjvanroestel/multiband_bls"
Repository = "https://github.com/jcjvanroestel/multiband_bls"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
multiband_bls = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config --cov=multiband_bls --cov-report=term-missing --cov-fail-under=90"
markers = [
    "gpu: requires a CUDA-capable GPU and CuPy",
    "slow: long-running tests",
]

[tool.coverage.run]
# gpu.py needs a CUDA device + CuPy, which CI runners lack; its logic is
# covered by the GPU-gated tests on GPU-capable runners instead. Omit it so
# the coverage gate reflects the code CI can actually exercise.
omit = ["*/gpu.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "NPY", "RUF"]
ignore = [
    "RUF001", "RUF002", "RUF003",  # ambiguous unicode: ×, – etc. are intentional in docs
    "RUF022",                       # __all__ grouped by category, not sorted
    "SIM108",                       # if/else kept for the commented duration-branch logic
]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
check_untyped_defs = true

# CuPy, Cython and the compiled Cython cores ship no type information; scope the
# missing-import waiver to them rather than silencing every unresolved import.
[[tool.mypy.overrides]]
module = [
    "cupy.*",
    "Cython.*",
    "multiband_bls._eebls",
    "multiband_bls._meebls",
    "multiband_bls._msbls",
    "multiband_bls._sbls",
]
ignore_missing_imports = true
